2001-10-17  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Fixes for bug #213579. Problem on invariant background under
          all viewpoint transformations.

2001-10-17  Braden McDaniel  <braden@endoframe.com>

        * Use variables resolved by configure to tell Java where .class
          files and libraries are installed.

        * Fixed memory leak involving inappropriate use of freeze() with
          ostrstream in `ScriptJDK.cpp'.

        * Java .class files are nolonger installed by `make install'.

        * JNI headers are nolonger generated. (They aren't strictly
          required, and automake 1.5 has problems with generated sources
          that should be neither installed nor included in the
          distribution.)

        * Added checks for `javac' and `jar' to configure.

        * Changed `--with-jni' option to `--with-jdk'. 

        * Don't attempt to compile Java classes for `--without-jdk'.

2001-10-15  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Add accumulateTransform after adding all nodes to Scene in
          "VrmlScene" to cache a pointer to ParentTransform. It is needed
          to calculate the inverse of transformation stack above
          Viewpoint node before rendering traversal starts.

        * Fix for Bug #226213 : Nested Viewpoint problem.

2001-10-15  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Change method names in VrmlMatrix as ECMAScript VrmlMatrix
          definition.

        * Incorporated changes as suggested by Braden (Thanks to Braden)

        * As defined in ECMAScript definition, remove 
          "transform_to_matrix" method from VrmlNodeTransform node and
          put it in VrmlMatrix as "setTransform" method.

2001-10-15  Thomas Flynn <tflynn@users.sourceforge.net>

        * Implemented Task 24920 (Use a standard container for routes)

        * Fix core dumping problem with AudioClip's.

        * Backout of earlier, incorrect fix to Material node handling.
