@@ -1,3 +1,9 @@
+2001-10-27  Braden McDaniel  <braden@endoframe.com>
+
+        * Give up on trying to predict where the SpiderMonkey headers
+          live. Users should supply this in CPPFLAGS when running
+          configure.
+
 2001-10-17  S. K. Bose  <bose@pavan.barc.ernet.in>
 
         * Fixes for bug #213579. Problem on invariant background under
